# TheKissOfShame

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ShameResources.h  shameConfig.h
Source/AudioProcessing/: AudioGraph.h  Biquads.h  Blend.h  Envelope.h  EnvelopeDips.h  Environments.h  Flange.h  Granulate.cpp  Granulate.h  Hiss.h  InputSaturation.h  LoopCrossfade.h  Noise.h  PrintThrough.h  Shame.h
Source/GUIUtilities/: BacklightComponent.h  CustomButton.h  CustomKnob.cpp  CustomKnob.h  EnvironmentsComponent.h  ImageAnimationComponent.h  ImageInteractor.cpp  ImageInteractor.h  Theme.h
Tests/: SmokeTest.cpp  SnapshotTool.cpp
demo/: app.js  generate_audio.py  index.html  styles.css
docs/: REV2_PLAN.md
